# HypeEdge

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_postgres_v2.py  003_exchange_fact_chain.py  004_durable_outbox.py  005_position_projection_scope.py  006_enforce_account_position_projection.py  007_market_making_foundation.py  008_strategy_instance_revision.py  009_market_maker_external_risk_config.py  010_trend_follow_config_versions.py
configs/: dev.yaml  strategy_trend.yaml  testnet.yaml
configs/operations/: market_making_release_gates.yaml
configs/prometheus/: market_making_alerts.yml
docs/: deployment.md  design.md  frontend_design.md  frontend_ui_redesign.md  implementation_plan.md  market_making_design.md  market_making_implementation_plan.md  strategy_control_plane.md
rules/: backend.md  frontend.md
src/hypeedge/: __init__.py  __main__.py  app.py
tests/: conftest.py
tests/fixtures/: market_making_p8_validation.json
tests/integration/: README.md  conftest.py  test_hyperliquid_testnet.py
tests/unit/: test_account_health.py  test_account_risk.py  test_action_budget.py  test_alerts.py  test_api.py  test_api_commands.py  test_api_security.py  test_app_market_making.py  test_app_startup_safety.py  test_backtest.py  test_backtest_verify.py  test_binance_feed.py  test_book.py  test_canary_gates.py  test_checkpoint.py  test_clickhouse_writer.py  test_command_service.py  test_config.py  test_core_types.py  test_data_quality.py  test_dedup.py  test_duckdb_export.py  test_durable_outbox_sse.py  test_durable_worker.py  test_emergency_cancel.py  test_event_bus.py  test_exchange_fact_chain.py  test_execution.py  test_execution_batch.py  test_execution_recovery.py  test_external_reference.py  test_live_market_provider.py  test_market_features.py  test_market_maker_external_model.py  (+22 more)
web/: .env.example  eslint.config.mjs  middleware.test.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
(+170 files in other folders)
